# adaptive_router

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  main.py  pyproject.toml
.github/workflows/: adaptive-app-ci-dev.yml  adaptive-app-ci.yml  adaptive-router-app-ci.yml  adaptive-router-ci-dev.yml  adaptive-router-ci.yml  adaptive-router-core-ci-dev.yml  adaptive-router-core-ci.yml  adaptive-router-core-dev-ci.yml  ci.yml  model-router-ci.yml  model-router-dev-ci.yml  publish-core-cpu.yml  publish-core-cuda.yml  publish-core.yml  workspace-ci.yml
adaptive_router/: CHANGELOG.md  pyproject.toml
adaptive_router/core/: cluster_engine.py  router.py
adaptive_router/models/: storage.py
adaptive_router/profiling/: .gitignore
adaptive_router_app/: README.md  main.py  pyproject.toml
adaptive_router_app/adaptive_router_app/: main.py
adaptive_router_core/: .clang-format  CMakeLists.txt  CMakePresets.json  conanfile.py  pyproject.toml
adaptive_router_core/cmake/: AdaptiveCompileOptions.cmake
adaptive_router_core/include/: cluster.hpp  cluster_cpu.hpp  (+3 more)
adaptive_router_core_cu12/: conanfile.py  pyproject.toml
benchmarks/: README.md  pyproject.toml
benchmarks/swe-bench/: .env.example  .gitignore  NEXT_STEPS.md  README.md  SETUP_COMPLETE.md  analysis.ipynb  pyproject.toml  quick_start.sh  run_benchmark.py  test_cost_bias.ipynb
benchmarks/swe-bench/src/: __init__.py  config.py
benchmarks/swe-bench/src/models/: __init__.py  adaptive_model.py  base.py
benchmarks/swe-bench/src/utils/: __init__.py  dataset_loader.py  response_parser.py  result_tracker.py  swebench_integration.py
benchmarks/swe-bench/swe-bench/: README.md
benchmarks/swe-bench/swe-bench/scripts/: run_batch.sh  run_test.sh
benchmarks/swe-bench/swe-bench/src/: __init__.py  agent.py  modal_env.py  pricing.py  run.py  runner.py
benchmarks/swe-bench/swe-bench/submission/: metadata.yaml
nordlys/: pyproject.toml
scripts/: migrate_profile.py
(+39 files in other folders)
