[project]
name = "adaptive-router-workspace"
version = "0.1.0"
requires-python = ">=3.11,<4.0"
description = "Workspace root for Adaptive Router monorepo"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["adaptive_router_workspace"]

[tool.uv.workspace]
members = [
    "adaptive_router",
    "adaptive_router_app",
    "adaptive_router_core",
]

[dependency-groups]
dev = [
    "nanobind>=2.9.2",
]

[tool.uv.sources]
# Workspace members can reference each other
adaptive-router = { workspace = true }
adaptive-router-app = { workspace = true }
adaptive-router-core = { workspace = true }
